Updating pom.xml for onosproject release

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.btisystems</groupId>
     <artifactId>snmp-core</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3-20161021.1</version>
     <packaging>jar</packaging>
     <name>snmp-core</name>
     <description>A Library for interacting with SNMP based Devices using SNMP4J</description>
     <url>https://github.com/btisystems/snmp-core</url>
+    <developers>
+        <developer>
+            <organization>BTI Systems</organization>
+        </developer>
+    </developers>
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
