--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.btisystems</groupId>
+    <groupId>org.onosproject</groupId>
     <artifactId>snmp-core</artifactId>
     <version>1.3-20161021.1</version>
     <packaging>jar</packaging>
     <name>snmp-core</name>
     <description>A Library for interacting with SNMP based Devices using SNMP4J</description>
     <url>https://github.com/btisystems/snmp-core</url>
-    <developers>
-        <developer>
-            <organization>BTI Systems</organization>
-        </developer>
-    </developers>
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -20,6 +15,11 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <developers>
+        <developer>
+            <organization>BTI Systems</organization>
+        </developer>
+    </developers>
     <scm>
         <connection>scm:git:git://github.com/btisystems/snmp-core.git</connection>
         <developerConnection>scm:git:git@github.com:btisystems/snmp-core.git</developerConnection>
